--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-quick-start",
+  "name": "Breakout",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A breakout application",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -14,7 +14,7 @@
     "tutorial",
     "demo"
   ],
-  "author": "GitHub",
+  "author": "Christopher",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^11.2.1"
